chore: Fix jump link issues, remove workflow

--- a/src/components/Intro/intro-section.module.scss
+++ b/src/components/Intro/intro-section.module.scss
@@ -158,6 +158,7 @@
   margin: 2.5rem auto;
   max-width: 60ch;
   & .intro_section__heading_wrapper {
+    height: 15rem;
     display: flex;
     justify-content: center;
     align-items: center;
